# mwaa-disaster-recovery

./: .editorconfig  .env.sample  .gitallowed  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PYPIDOC.md  README.md  app.py  build.sh  clean  config.py  data.json  mwaa  pre_processor.py  pyproject.toml  requirements-dev.txt  requirements.txt  temp.json  test  versioning
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
assets/: requirements.txt
assets/dags/mwaa_dr/: .airflowignore  backup_metadata.py  cleanup_metadata.py  restore_metadata.py
assets/dags/mwaa_dr/framework/factory/: base_dr_factory.py  default_dag_factory.py
assets/dags/mwaa_dr/framework/model/: active_dag_table.py  base_table.py  connection_table.py  dependency_model.py  variable_table.py
assets/dags/mwaa_dr/v_2_10/: dr_factory.py
assets/dags/mwaa_dr/v_2_4/: dr_factory.py
assets/dags/mwaa_dr/v_2_5/: dr_factory.py
assets/dags/mwaa_dr/v_2_6/: dr_factory.py
assets/dags/mwaa_dr/v_2_7/: dr_factory.py
assets/dags/mwaa_dr/v_2_8/: dr_factory.py
assets/dags/mwaa_dr/v_2_9/: dr_factory.py
design/: architecture.drawio
htmlcov/: .gitignore  class_index.html  config_py.html  function_index.html  index.html  status.json  z_0dcb8b4723b8d578_dr_factory_py.html  z_36c6ba8c9062a22c_dr_factory_py.html  z_6cfc12b3e911da82_dr_factory_py.html  z_a0bbdb627304d6fc_mwaa_base_stack_py.html  z_a0bbdb627304d6fc_mwaa_primary_stack_py.html  z_a0bbdb627304d6fc_mwaa_secondary_stack_py.html  z_a5020b2e5b9ed879_airflow_cli_client_py.html  z_a5020b2e5b9ed879_airflow_cli_function_py.html  z_a5020b2e5b9ed879_airflow_dag_trigger_function_py.html  z_a5020b2e5b9ed879_cloudwatch_health_check_function_py.html  z_a5020b2e5b9ed879_create_environment_function_py.html  z_a5020b2e5b9ed879_disable_scheduler_function_py.html  z_a5020b2e5b9ed879_get_environment_function_py.html  z_a5020b2e5b9ed879_replication_job_function_py.html  z_a9fe567657ed6faf_airflow_cli_py.html  z_c1cae669bd7bdb27_dr_factory_py.html  z_cb6154a45c00dbc5_dr_factory_py.html  z_d1475c7c80730090_base_dr_factory_py.html  z_d1475c7c80730090_default_dag_factory_py.html  z_d60e6df3c81aa13b_dr_factory_py.html  z_df560391423104be_airflow_cli_py.html  z_df9fc19b5f2dc37b_active_dag_table_py.html  z_df9fc19b5f2dc37b_base_table_py.html  z_df9fc19b5f2dc37b_connection_table_py.html  z_df9fc19b5f2dc37b_dependency_model_py.html  z_df9fc19b5f2dc37b_variable_table_py.html  z_f4c1212f1e19fb55_dr_factory_py.html
lib/constructs/: airflow_cli.py
lib/dr_constructs/: airflow_cli.py
lib/function/: airflow_cli_client.py  airflow_cli_function.py  airflow_dag_trigger_function.py  cloudwatch_health_check_function.py  create_environment_function.py  disable_scheduler_function.py  get_environment_function.py  requirements.txt
lib/functions/: airflow_cli_function.py  airflow_dag_trigger_function.py  cloudwatch_health_check_function.py  disable_scheduler_function.py  replication_job_function.py
lib/stacks/: mwaa_base_stack.py  mwaa_primary_stack.py  mwaa_secondary_stack.py
tests/integration/: integration_test.py
tests/integration/dags/samples/: consumer.py  group_dag.py  hello_world_dag.py  parallel_dag.py  producer.py  triggerer.py  xcom_dag.py
tests/integration/dags/samples/groups/: group_download.py  group_transform.py
tests/integration/startup_script/: startup.sh
tests/unit/: config_test.py
tests/unit/function/: airflow_cli_client_test.py  airflow_cli_function_test.py  airflow_dag_trigger_function_test.py  cloudwatch_health_check_function_test.py  create_environment_function_test.py  disable_scheduler_function_test.py  get_environment_function_test.py
tests/unit/functions/: airflow_cli_client_test.py  airflow_cli_function_test.py  airflow_dag_trigger_function_test.py  cloudwatch_health_check_function_test.py  create_environment_function_test.py  disable_scheduler_function_test.py  get_environment_function_test.py  replication_job_function_test.py
tests/unit/mocks/: environment_configs.py  mock_setup.py  stacks.py
tests/unit/mwaa_dr/framework/factory/: test_base_dr_factory.py  test_default_dag_factory.py
tests/unit/mwaa_dr/framework/model/: test_active_dag_table.py  test_base_table.py  test_connection_table.py  test_dependency_model.py  test_variable_table.py
tests/unit/mwaa_dr/v_2_10/: test_dr_factory_2_10.py
tests/unit/mwaa_dr/v_2_4/: test_dr_factory_2_4.py
tests/unit/mwaa_dr/v_2_5/: test_dr_factory_2_5.py
tests/unit/mwaa_dr/v_2_6/: test_dr_factory_2_6.py
tests/unit/mwaa_dr/v_2_7/: test_dr_factory_2_7.py
tests/unit/mwaa_dr/v_2_8/: test_dr_factory_2_8.py
tests/unit/mwaa_dr/v_2_9/: test_dr_factory_2_9.py
tests/unit/stacks/: test_mwaa_primary_stack.py  test_mwaa_secondary_stack.py
